--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </div>
   <script>
-    const apiKey="0acbfd2fdbe5e2117c9f6f0c7f26aa4c";
+    const apiKey="//get your api key and enter in this line";
     const apiUrl="https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
 
     const searchBox = document.querySelector(".search input");
