--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
   <script>
     const apiKey="//get your api key and enter in this line";
-    const apiUrl="https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
+    const apiUrl="//get your api url link and enter in this line";
 
     const searchBox = document.querySelector(".search input");
     const searchBtn = document.querySelector(".search button");
